# sukaalicheck

./: .env.example  .gitignore  ADMIN_ROADMAP.md  BUSINESS_LOGIC.md  CLAUDE.md  DEPLOYMENT.md  OVERVIEW.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: layout.tsx  (+1 more)
sukaali-check-backend/: .env.example  CLAUDE.md  Dockerfile  SIGNUP_LOGIN_PLAN.md  pyproject.toml
sukaali-check-backend/alembic/: env.py
sukaali-check-backend/alembic/versions/: 20f2e01112f8_initial_schema.py  4f0109586844_app_settings_table_and_payment_failure_.py  c7e9a2b4f108_add_rejection_reason_to_facilities.py  d18a5dc6a9d3_add_admin_table.py  def8b82d6b5a_add_clinical_intake_and_hba1c_fields.py  f5debed2a308_add_prediction_records_table.py
sukaali-check-backend/scripts/: generate_admin_token.py  provision_momo_sandbox.py
sukaali-check-backend/src/sukaali_check_backend/: __init__.py  app.py  config.py
sukaali-check-backend/src/sukaali_check_backend/api/: deps.py
sukaali-check-backend/src/sukaali_check_backend/core/: email.py  exceptions.py  model.py  momo.py  security.py
sukaali-check-backend/src/sukaali_check_backend/db/: session.py
sukaali-check-backend/src/sukaali_check_backend/ml/: OptimizedRFmodel.pkl  feature_columnsRF.pkl
sukaali-check-backend/src/sukaali_check_backend/models/: __init__.py  admin.py  app_setting.py  facility.py  otp_token.py  payment_record.py  prediction_record.py  specialist.py
sukaali-check-backend/src/sukaali_check_backend/repositories/: admin_repo.py  app_setting.py  facility.py  otp_token.py  payment.py  prediction.py  specialist.py
(+81 files in other folders)
