[project]
name = "sukaali-check-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lodkazibwe", email = "lodkazibwe@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "scikit-learn==1.4.1.post1",
    "numpy>=1.26.0",
]

[project.scripts]
sukaali-check-backend = "sukaali_check_backend:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
